--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
-header {
-  background-image: url("../img/");
+.conteiner1 {
+  background-image: url("../img/pattern.png");
+  background-color: cadetblue;
+  width: 50% auto;
+  background-position: center
+}
+
+.titolo1{
+  center
 }
