--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,17 @@
   background-color: cadetblue;
 }
 
+.logocontainer {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.logo {
+  width: 150px;
+}
+
 .conteiner2 {
-  width: 1000px;
+  width: 800px;
   margin: 0 auto;
   font-size: 25px;
 }
